<resources>
    <string name="app_name">PlantNexus_Kt</string>
    <string name="blogs">Blogs</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="registeras">Register as</string>
    <string name="welcome_community">Welcome to \nCommunity,</string>
    <string name="fullname">Full name</string>
    <string name="phone">Contact Number</string>
    <string name="next">Next</string>
    <string name="storename">Store/Brand Name</string>
    <string name="address">Store Address</string>
    <string name="analytics">Analytics</string>
    <string name="deliveryboy">Delivery Boy</string>
    <string name="dname">Vitharshan</string>
    <string name="scan">Take Picture</string>
    <string name="gardenguru">Garden Guru</string>
    <string name="garden_guru">Garden Guru</string>
    <string name="user">User</string>
    <string name="ask_anything">Ask anything</string>
    <string name="logo_of_plantnexus">logo of Plant Nexus</string>
    <string name="customer">Customer</string>
    <string name="seller">Seller</string>
    <string name="navigate_to_regsiter_choose">Navigate to Regsiter choose</string>
</resources>