<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_green_white"
    tools:context=".Register">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="414dp"
        android:layout_height="167dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="65dp"
            android:layout_height="78dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="275dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/cross_in_foreground"
            android:contentDescription="@string/navigate_to_regsiter_choose" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_community"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="558dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/register_details" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/register_details" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/password" />

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/password" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:backgroundTint="#228863"
            android:text="@string/next"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:src="@mipmap/app_logo_foreground"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>