<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_green_white"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="331dp"
        android:src="@mipmap/app_logo_foreground" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:srcCompat="@drawable/google" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#5EFFFFFF"
        android:drawableStart="@drawable/person"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#5EFFFFFF"
        android:drawableStart="@drawable/password"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        tools:text="@string/password" />


    <Button
        android:id="@+id/login"
        android:layout_width="314dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#228863"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="314dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:backgroundTint="#228863"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="24sp" />

</LinearLayout>