<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_green_white"
    android:orientation="vertical"
    tools:context=".Register_choose">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="279dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/app_logo_foreground"
        android:contentDescription="@string/logo_of_plantnexus" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:gravity="center"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="85dp"
                android:layout_height="29dp"
                app:srcCompat="@drawable/background_green" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/registeras"
            android:layout_width="238dp"
            android:layout_height="91dp"
            android:gravity="center"
            android:text="@string/registeras"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="85dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="85dp"
                android:layout_height="29dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/background_green" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="172dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            app:cardCornerRadius="20dp">

            <ImageButton
                android:id="@+id/customer"
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="#738C77"
                android:contentDescription="@string/customer"
                android:scaleType="fitCenter"
                android:src="@drawable/customer"
                tools:srcCompat="@drawable/customer" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="172dp"
            android:backgroundTint="#00FFFFFF"
            app:cardCornerRadius="20dp">

            <ImageButton
                android:id="@+id/seller"
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#738C77"
                android:contentDescription="@string/seller"
                android:scaleType="fitCenter"
                android:src="@drawable/seller"
                tools:src="@drawable/seller" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="314dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20sp"
        android:backgroundTint="#228863"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="24sp" />

</LinearLayout>