<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_green_white"
    tools:context=".Registerseller">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="414dp"
        android:layout_height="167dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="65dp"
            android:layout_height="78dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="275dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/cross_in_foreground" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_community"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="408dp"
        android:layout_height="558dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/storename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/storename"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/registerseller" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/registerseller" />

        <EditText
            android:id="@+id/fullnameseller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/registerseller" />

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/registerseller" />

        <Spinner
            android:id="@+id/business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:backgroundTint="#228863"
            android:text="@string/next"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:src="@mipmap/app_logo_foreground" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>