<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_green_white"
    tools:context=".GardenGuru">

    <LinearLayout
        android:id="@+id/head_serach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/navigateback_serach"
            android:layout_width="60dp"
            android:layout_height="@dimen/headerheight"
            android:layout_marginTop="15dp"
            android:src="@mipmap/navback_foreground" />

        <TextView
            android:id="@+id/gardenGuru"
            android:layout_width="290dp"
            android:layout_height="@dimen/headerheight"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:fontFamily="@font/adamina"
            android:text="@string/garden_guru"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/home_serach"
            android:layout_width="63dp"
            android:layout_height="@dimen/headerheight"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="-3dp"
            android:src="@mipmap/home2_foreground" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/listview"
        android:layout_below="@id/head_serach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/responselist"
            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:scrollbars="horizontal|vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/guru" />
    </LinearLayout>

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="169dp"
        android:layout_above="@id/idTILQuery"
        android:layout_below="@id/listview"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/idTVQuestion"
                    android:layout_width="337dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/user"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/guru" />


                <ImageView
                    android:id="@+id/userimg"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/user"
                    android:src="@drawable/userchat"
                    android:visibility="visible"
                    tools:srcCompat="@drawable/userchat" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ailayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/aimg"
                    android:layout_width="61dp"
                    android:layout_height="39dp"
                    android:contentDescription="@string/user"
                    android:src="@drawable/ai"
                    android:visibility="visible"
                    tools:srcCompat="@drawable/ai" />

                <TextView
                    android:id="@+id/txtResponse"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:text="@string/garden_guru"
                    android:textColor="@color/black"
                    android:textSize="@dimen/guru" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    <!-- text field for asking question-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:hint="@string/ask_anything"
        android:padding="5dp"
        android:textColorHint="@color/white"
        app:shapeAppearanceOverlay="@style/TextInputLayoutRounded"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etQuestion"
            android:layout_width="402dp"
            android:layout_height="72dp"
            android:background="@color/c1"
            android:drawableEnd="@drawable/ic_send"
            android:drawableTint="@color/white"
            android:ems="10"
            android:imeOptions="actionSend"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>